added about details, edited a tiny bit of .tex

--- a/report-p1.tex
+++ b/report-p1.tex
@@ -77,7 +77,7 @@ This implementation is more vague, as the sheer amount of data sets that the Cen
 We have chosen four models to use in our site: artists, albums, articles, and cities.
 
 \subsection{Artist}
-An artist is a person or group that has released music. This model contains personal information about an artist as well as information about the music they have released. This information is scraped using the Spotify API.\\ blaj
+An artist is a person or group that has released music. This model contains personal information about an artist as well as information about the music they have released. This information is scraped using the Spotify API.\\
 
 Attributes:
 \begin{itemize}
